# Llanguage

./: .flake8  .gitignore  README.md  main.py  manage.py  pyproject.toml  settings.py
.github/workflows/: github-ci.yml
llanguage/: asgi.py  settings.py  wsgi.py
src/llanguage/: urls.py
