[tool.poetry]
name = "llanguage"
version = "0.1.0"
description = ""
authors = ["Alexei Korpachev alekkorpachyov@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["all"], version = "^0.115.5"}

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = {extras = ["colors"], version = "^5.13.2"}
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# pytest configuration
[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

# linting configuration
[tool.black]
target-version = ['py311']
line-length = 88
skip-string-normalization = true
color = true

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = false
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
color_output = true
